--- a/practica-MP/index-servicios.html
+++ b/practica-MP/index-servicios.html
@@ -71,18 +71,36 @@
         </svg>
       </div>
     </header>
+    <hr class="border-t-2 border-[#04227e85] mt-1 md:border-t-4" />
 
     <main>
+      <section>
+        <p
+          class="flex text-center aligne-center justify-center text-3xl md:text-5xl font-semibold text-gray-800 max-w-8xl mx-auto mt-8 mb-4 px-4"
+        >
+          ¡Bienvenidos a mi página de servicios!
+        </p>
+        <p
+          class="flex text-center aligne-center justify-center text-base md:text-2xl font-light text-gray-600 max-w-2xl mx-auto mt-2 mb-8 px-4"
+        >
+          En esta página quiero compartir con ustedes algunos de los servicios
+          que ofrezco, así como mis talentos, hobbies y pasiones. <br />
+          ¡Espero que disfruten explorando este espacio creativo!
+        </p>
+      </section>
       <section
-        class="grid grid-cols-1 md:grid-cols-2 gap-10 m-16 place-items-center"
+        class="Servicios max-w-7xl w-full mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-12 place-items-center m-10"
       >
         <!-- Dj Productor -->
-        <div class="flex flex-col items-center text-center max-w-md">
+        <div
+          class="flex flex-col items-center text-center w-full max-w-[300px] sm:max-w-[360px] md:max-w-[400px]"
+        >
+          <h1 class="text-4xl font-bold mb-6">DJ - PRODUCTOR</h1>
           <div
-            class="DJ-Mezclas relative w-[400px] h-[400px] rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv"
+            class="DJ-Mezclas rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv hover:scale-110 transform transition duration-300 m-6"
           >
             <a
-              href="https://www.youtube.com/watch?v=GBouFAMhP4s"
+              href="https://youtube.com/playlist?list=PLdOr2AHNhg_EVtF0Rkj4KIN59-Ehmj0MD&si=R4g2CzeJnggN4ZdL"
               target="_blank"
               aria-label="portafolio"
             >
@@ -92,24 +110,27 @@
                 muted
                 loop
                 playsinline
-                class="w-full h-full object-cover"
+                class="w-full h-full object-cover hover:scale-110 transform transition duration-300"
               ></video>
             </a>
           </div>
-          <p class="text-2xl mt-4">
+          <p class="text-sm sm:text-base md:text-2xl font-light mt-4">
             "Soy un aprendiz de DJ y productor musical apasionado por crear
             experiencias sonoras que conectan emociones, estilos y momentos
-            únicos..."
+            únicos."
           </p>
         </div>
 
         <!-- Publicista -->
-        <div class="flex flex-col items-center">
+        <div
+          class="flex flex-col items-center text-center w-full max-w-[300px] sm:max-w-[360px] md:max-w-[400px]"
+        >
+          <h1 class="text-4xl font-bold mb-6">ARTISTA</h1>
           <div
-            class="DJ-Mezclas w-[400px] h-[400px] rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv"
+            class="publicista rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv hover:scale-110 transform transition duration-300 m-6"
           >
             <a
-              href="https://www.youtube.com/watch?v=ZtPHjQdqruA&t=10s"
+              href="https://youtube.com/playlist?list=PLdOr2AHNhg_FbNO5YabUuAnadIEGLXbRs&si=YhIB63ZZ5c_h6eo7"
               target="_blank"
               aria-label="ArtBeats"
             >
@@ -119,19 +140,26 @@
                 muted
                 loop
                 playsinline
-                class="w-full h-full object-cover"
+                class="w-full h-full object-cover hover:scale-110 transform transition duration-300"
               ></video>
             </a>
           </div>
+          <p class="text-sm sm:text-base md:text-2xl font-light mt-4">
+            “Disfruto pintar, dibujar y hacer manualidades. Cada creación es una
+            forma de expresar lo que siento y dejar volar mi imaginación.”
+          </p>
         </div>
 
         <!-- La cocina de Alzate -->
-        <div class="flex flex-col items-center">
+        <div
+          class="flex flex-col items-center text-center w-full max-w-[300px] sm:max-w-[360px] md:max-w-[400px]"
+        >
+          <h1 class="text-4xl font-bold mb-6">LA COCINA DE ALZATE</h1>
           <div
-            class="DJ-Mezclas w-[400px] h-[400px] rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv"
+            class="cheff-alzate rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv hover:scale-110 transform transition duration-300 m-6"
           >
             <a
-              href="https://www.youtube.com/shorts/qbST5PVyrI0"
+              href="https://youtube.com/playlist?list=PLdOr2AHNhg_FNXkG0ZqZl7R4Mx33Oshlg&si=OcfWGiwAqqyfigau"
               target="_blank"
               aria-label="La cocina de Alzate"
             >
@@ -141,19 +169,26 @@
                 muted
                 loop
                 playsinline
-                class="w-full h-full object-cover"
+                class="w-full h-full object-cover hover:scale-110 transform transition duration-300"
               ></video>
             </a>
           </div>
+          <p class="text-sm sm:text-base md:text-2xl font-light mt-4">
+            “Me gusta preparar recetas que encuentro en internet. Cocinar es mi
+            forma de compartir momentos deliciosos con mi familia.”
+          </p>
         </div>
 
         <!-- Guitarrista -->
-        <div class="flex flex-col items-center">
+        <div
+          class="flex flex-col items-center text-center w-full max-w-[300px] sm:max-w-[360px] md:max-w-[400px]"
+        >
+          <h1 class="text-4xl font-bold mb-6">MUSICO</h1>
           <div
-            class="DJ-Mezclas w-[400px] h-[400px] rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv"
+            class="guitarrista rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg llamas-uv hover:scale-110 transform transition duration-300 m-6"
           >
             <a
-              href="https://www.youtube.com/watch?v=07X1C0zUEFw&list=PLdOr2AHNhg_GugVFLkGyNf1aAZDECB4cW&index=2"
+              href="https://youtube.com/playlist?list=PLdOr2AHNhg_GugVFLkGyNf1aAZDECB4cW&si=GWo93b4Xa3CnHpCR"
               target="_blank"
               aria-label="Guitar"
             >
@@ -167,44 +202,51 @@
               ></video>
             </a>
           </div>
+          <p class="text-sm sm:text-base md:text-2xl font-light mt-4">
+            “Me encanta tocar la guitarra, escribir canciones y explorar
+            sonidos. A veces practico un poco de piano para inspirarme y seguir
+            creando.”
+          </p>
         </div>
       </section>
     </main>
 
     <footer>
+      <hr class="border-t-2 border-[#3b2b8c] pb-1 md:border-t-4" />
       <div
-        class="footer-container bg-gradient-to-b from-[#3b2b8c] to-[#7265d7] text-white"
+        class="grid grid-cols-2 md:grid-cols-1 footer-container bg-gradient-to-b from-[#3b2b8c] to-[#7265d7] text-white"
       >
         <div
-          class="footer flex justify-around text-center text-1xl p-6 md:text-lg gap-4"
+          class="footer md:flex justify-around text-center text-sm p-6 md:text-3xl gap-4"
         >
           <div class="content-foo text-white">
             <h4>TELEFONO</h4>
-            <p class="text-yellow-400">(+57) 317 497 3545</p>
+            <p class="text-yellow-400 cursor-pointer">(+57) 317 497 3545</p>
           </div>
           <div class="content-foo text-white">
             <h4>EMAIL</h4>
-            <p class="text-yellow-400">codecraft@gmail.com</p>
+            <p class="text-yellow-400 cursor-pointer">codecraft@gmail.com</p>
           </div>
           <div class="content-foo text-white">
             <h4>DIRECCION</h4>
-            <p class="text-yellow-400">Avenida Siempre viva</p>
+            <p class="text-yellow-400 cursor-pointer">Avenida Siempre viva</p>
           </div>
         </div>
-        <div class="flex justify-center items-center gap-8">
-          <h2 class="http text-1xl text-white">
-            &copy; https://CodeCraft.com.co
-          </h2>
-
-          <div class="flex justify-end m-6">
+        <div
+          class="flex flex-col items-center justify-center gap-2 m-4 md:flex-row md:justify-center md:items-center md:gap-8"
+        >
+          <div class="flex justify-center md:justify-end m-6">
             <a href="#top" aria-label="Volver al inicio"
               ><button
-                class="cursor-pointer text-lg font-semibold text-white bg-red-600 text-center p-2 rounded-2xl shadow-lg hover:bg-green-600 transition-colors duration-300 hover:scale-105 px-4"
+                class="cursor-pointer text-lg font-semibold border-3 border-white text-white bg-red-600 text-center p-2 rounded-2xl shadow-lg hover:bg-orange-600 transition-colors duration-300 hover:scale-105 px-4 md:w-[150px]"
               >
                 INICIO
               </button></a
             >
           </div>
+          <h2 class="cursor-pointer http text-[12px] text-white md:text-2xl">
+            &copy; https://CodeCraft.com.co
+          </h2>
         </div>
       </div>
     </footer>
