--- a/practica-MP/index.html
+++ b/practica-MP/index.html
@@ -13,6 +13,21 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./Estilo/styles.css" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="CodeCraft-Tecnology" />
+    <meta
+      property="og:description"
+      content="Portafolio CodeCraft Tecnology, proyectos y servicios ofrecidos."
+    />
+    <meta
+      property="og:image"
+      content="https://alzate1075.github.io/funval-g3/practica-MP/Jpg/Logos/CodeCraft/CodeCraft00.png"
+    />
+    <meta
+      property="og:url"
+      content="https://alzate1075.github.io/funval-G3/aniversario/index.html"
+    />
+    <meta property="og:type" content="website" />
   </head>
 
   <body class="w-full h-full">
