Agregué la imagen CodeCraft01 para miniatura

--- a/practica-MP/index.html
+++ b/practica-MP/index.html
@@ -22,7 +22,7 @@
       />
       <meta
         property="og:image"
-        content="https://alzate1075.github.io/funval-g3/practica-MP/Jpg/Logos/CodeCraft/CodeCraft01.png"
+        content="https://alzate1075.github.io/funval-g3/practica-MP/Jpg/Logos/CodeCraft/CodeCraft01.jpg"
       />
       <meta
         property="og:url"
