Agrego imagen codecraft01.jpg

--- a/practica-MP/index.html
+++ b/practica-MP/index.html
@@ -16,12 +16,13 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="CodeCraft-Tecnology" />
     <meta
-      property="og:description"
-      content="Portafolio CodeCraft Tecnology, proyectos y servicios ofrecidos."
+      property="og:image"
+      content="https://alzate1075.github.io/funval-G3/practica-MP/Jpg/Logos/CodeCraft/codecraft01.jpg"
     />
+
     <meta
       property="og:image"
-      content="https://alzate1075.github.io/funval-g3/practica-MP/Jpg/Logos/CodeCraft/CodeCraft01.jpg"
+      content="https://alzate1075.github.io/funval-g3/practica-MP/Jpg/Logos/CodeCraft/codecraft01.jpg"
     />
     <meta
       property="og:url"
