--- a/practica-MP/index.html
+++ b/practica-MP/index.html
@@ -12,17 +12,14 @@
       href="./Jpg/Logos/CodeCraft/CodeCraftIcon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./Estilo/styles.css" />
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="CodeCraft-Tecnology" />
+    <meta property="og:title" content="CodeCraft - Inicio" />
     <meta
-      property="og:image"
-      content="https://alzate1075.github.io/funval-G3/practica-MP/Jpg/Logos/CodeCraft/codecraft01.jpg"
+      property="og:description"
+      content="Bienvenido a CodeCraft, donde transformamos ideas en código."
     />
-
     <meta
       property="og:image"
-      content="https://alzate1075.github.io/funval-g3/practica-MP/Jpg/Logos/CodeCraft/codecraft01.jpg"
+      content="https://alzate1075.github.io/funval-G3/CodeCraft/Jpg/Logos/CodeCraft/codecraft.jpg"
     />
     <meta
       property="og:url"
