--- a/practica-MP/index.html
+++ b/practica-MP/index.html
@@ -12,18 +12,21 @@
       href="./Jpg/Logos/CodeCraft/CodeCraftIcon.png"
       type="image/x-icon"
     />
-    <meta property="og:title" content="CodeCraft - Inicio" />
+    <link rel="stylesheet" href="./Estilo/styles.css" />
+    <!-- Open Graph Meta Tags -->
+    <!-- Miniatura para redes sociales -->
+    <meta property="og:title" content="CodeCraft-Tecnology" />
     <meta
       property="og:description"
-      content="Bienvenido a CodeCraft, donde transformamos ideas en código."
+      content="Bienvenido a CodeCraft donde convertimos tus ideas en codigo."
     />
     <meta
       property="og:image"
-      content="https://alzate1075.github.io/funval-G3/CodeCraft/Jpg/Logos/CodeCraft/codecraft.jpg"
+      content="https://github.com/Alzate1075/funval-G3/blob/master/practica-MP/Jpg/Logos/CodeCraft/codecraft.jpg?raw=true"
     />
     <meta
       property="og:url"
-      content="https://alzate1075.github.io/funval-G3/practica-MP/index.html"
+      content="https://alzate1075.github.io/funval-G3/practica-MP/"
     />
     <meta property="og:type" content="website" />
   </head>
