--- a/practica-MP/index.html
+++ b/practica-MP/index.html
@@ -13,8 +13,9 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./Estilo/styles.css" />
+
     <!-- Open Graph Meta Tags -->
-    <!-- Miniatura para redes sociales -->
+
     <meta property="og:title" content="CodeCraft-Tecnology" />
     <meta
       property="og:description"
@@ -22,7 +23,7 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/Alzate1075/funval-G3/blob/master/practica-MP/Jpg/Logos/CodeCraft/codecraft.jpg?raw=true"
+      content="https://github.com/Alzate1075/funval-G3/blob/master/practica-MP/Jpg/Logos/CodeCraft/codecraftLogo1.jpg"
     />
     <meta
       property="og:url"
@@ -91,17 +92,20 @@
           <b>¿QUIENES SOMOS?</b>
         </h2>
         <div
-          class="Nosotros flex flex-col md:flex-row items-center justify-center gap-12 m-12"
+          class="Nosotros flex flex-col md:flex-row items-center justify-center w-full px-4 md:px-10 py-8 gap-2 md:gap-2"
         >
           <video
             src="./Jpg/Videos/Nosotros Vid.mp4"
             autoplay
             muted
             loop
-            class="w-full rounded-2xl shadow-lg max-w-xs sm:max-w-md md:max-w-sm h-auto object-contain mx-auto"
+            playsinline
+            class="w-full rounded-2xl shadow-lg max-w-xs sm:max-w-md md:max-w-sm h-auto object-contain mx-10"
           ></video>
 
-          <div class="contenido-textos text-center md:text-center text-2xl m-4">
+          <div
+            class="text-md contenido-texto-card text-center md:text-left md:text-2xl max-w-xl mt-4 md:mt-0"
+          >
             <p>
               <b>CodeCraft</b> nació con la idea de transformar ideas en código.
               Desde entonces, hemos crecido construyendo confianza y calidad en
@@ -129,85 +133,91 @@
             class="galeria-port flex flex-wrap justify-center gap-10 w-[90%] max-w-[1200px] m-auto"
           >
             <!-- Tarjeta 1 -->
-            <div
-              class="imagen-port w-full sm:w-[48%] lg:w-[30%] overflow-hidden relative cursor-pointer shadow-[0_0_6px_0_rgba(0,0,0,0.3)] group"
+            <a
+              href="./index-portafolio.html"
+              class="w-full sm:w-[48%] lg:w-[30%]"
             >
-              <img
-                src="./Jpg/Modulo/Portafolio.jpeg"
-                alt="Portafolio"
-                class="w-full h-auto"
-              />
               <div
-                class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
+                class="imagen-port overflow-hidden relative cursor-pointer shadow-[0_0_6px_0_rgba(0,0,0,0.3)] group rounded-2xl"
               >
-                <a
-                  href="./index-portafolio.html"
-                  target="_blank"
-                  aria-label="portafolio"
+                <h2 class="m-2 text-[#3b2b8c] text-center">
+                  <b>PORTAFOLIO</b>
+                </h2>
+                <img
+                  src="./Jpg/Modulo/Portafolio.jpeg"
+                  alt="Portafolio"
+                  class="w-full h-auto"
+                />
+                <div
+                  class="hover-galeria absolute w-full h-full top-0 bg-[rgba(37,27,80,0.66)] opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex justify-center items-center flex-col"
                 >
                   <img
                     src="Jpg/Iconos/Target.png"
                     alt="Icono-Target"
                     class="w-[50px] h-[50px] object-contain mb-2"
                   />
-                </a>
-                <p class="text-white font-semibold">Portafolio</p>
+                  <p class="text-white font-semibold">Portafolio</p>
+                </div>
               </div>
-            </div>
+            </a>
 
             <!-- Tarjeta 2 -->
-            <div
-              class="imagen-port w-full sm:w-[48%] lg:w-[30%] overflow-hidden relative cursor-pointer shadow-[0_0_6px_0_rgba(0,0,0,0.3)] group"
+            <a
+              href="./index-servicios.html"
+              class="w-full sm:w-[48%] lg:w-[30%]"
             >
-              <img
-                src="./Jpg/Modulo/Servicios.jpeg"
-                alt="Servicios"
-                class="w-full h-auto"
-              />
               <div
-                class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
+                class="imagen-port overflow-hidden relative cursor-pointer shadow-[0_0_6px_0_rgba(0,0,0,0.3)] group rounded-2xl"
               >
-                <a
-                  href="./index-servicios.html"
-                  target="_blank"
-                  aria-label="servicios"
+                <h2 class="m-2 text-[#3b2b8c] text-center">
+                  <b>SERVICIOS</b>
+                </h2>
+                <img
+                  src="./Jpg/Modulo/Servicios.jpeg"
+                  alt="Servicios"
+                  class="w-full h-auto"
+                />
+                <div
+                  class="hover-galeria absolute w-full h-full top-0 bg-[rgba(37,27,80,0.66)] opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex justify-center items-center flex-col"
                 >
                   <img
                     src="Jpg/Iconos/Target.png"
                     alt="Icono-Target"
                     class="w-[50px] h-[50px] object-contain mb-2"
                   />
-                </a>
-                <p class="text-white font-semibold">Servicios</p>
+                  <p class="text-white font-semibold">Servicios</p>
+                </div>
               </div>
-            </div>
+            </a>
 
             <!-- Tarjeta 3 -->
-            <div
-              class="imagen-port w-full sm:w-[48%] lg:w-[30%] overflow-hidden relative cursor-pointer shadow-[0_0_6px_0_rgba(0,0,0,0.3)] group"
+            <a
+              href="./index-contactanos.html"
+              class="w-full sm:w-[48%] lg:w-[30%]"
             >
-              <img
-                src="./Jpg/Modulo/Contactanos1.jpeg"
-                alt="Contactanos"
-                class="w-full h-auto"
-              />
               <div
-                class="hover-galeria absolute w-full h-full top-0 scale-0 group-hover:scale-100 bg-[rgba(37,27,80,0.66)] transition-transform duration-500 flex justify-center items-center flex-col"
+                class="imagen-port overflow-hidden relative cursor-pointer shadow-[0_0_6px_0_rgba(0,0,0,0.3)] group rounded-2xl"
               >
-                <a
-                  href="./index-contactanos.html"
-                  target="_blank"
-                  aria-label="servicios"
+                <h2 class="m-2 text-[#3b2b8c] text-center">
+                  <b>CONTÁCTANOS</b>
+                </h2>
+                <img
+                  src="./Jpg/Modulo/Contactanos1.jpeg"
+                  alt="Contáctanos"
+                  class="w-full h-auto"
+                />
+                <div
+                  class="hover-galeria absolute w-full h-full top-0 bg-[rgba(37,27,80,0.66)] opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex justify-center items-center flex-col"
                 >
                   <img
                     src="Jpg/Iconos/Target.png"
                     alt="Icono-Target"
                     class="w-[50px] h-[50px] object-contain mb-2"
                   />
-                </a>
-                <p class="text-white font-semibold">Contáctanos</p>
+                  <p class="text-white font-semibold">Contáctanos</p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </section>
@@ -215,16 +225,16 @@
         class="Quien-soy py-[20px] w-[90%] max-w-[1000px] m-auto overflow-hidden"
       >
         <h2
-          class="titulo text-[#3b2b8c] text-3xl flex justify-center text-center mb-[60px] shadow-[0_0_6px_0_rgba(0,0,0,0.5)] p-2"
+          class="titulo text-[#3b2b8c] text-3xl flex justify-center text-center mb-[10px] shadow-[0_0_6px_0_rgba(0,0,0,0.5)] p-2"
         >
           <b>¿QUIÉN SOY?</b>
         </h2>
 
         <div
-          class="flex flex-col md:flex-row items-center justify-between bg-transparent w-full px-4 md:px-10 py-8"
+          class="flex flex-col md:flex-row items-center justify-between bg-transparent w-full px-8 md:px-10 py-8"
         >
           <div
-            class="relative w-[300px] h-[300px] md:w-[300px] md:h-[300px] rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg md:mb-0"
+            class="relative w-[200px] h-[200px] md:w-[300px] md:h-[300px] rounded-full overflow-hidden border-[6px] border-[rgba(41,37,95,0.66)] shadow-lg md:mb-0"
           >
             <video
               src="./Jpg/Videos/soy-yo.mp4"
@@ -237,7 +247,7 @@
           </div>
 
           <div
-            class="contenido-texto-card text-center md:text-left text-2xl max-w-xl mt-8"
+            class="text-md contenido-texto-card text-center md:text-left md:text-2xl max-w-xl mt-8"
           >
             <h4 class="font-bold text-[#3b2b8c]">EDWIN ALZATE</h4>
             <p>
@@ -253,7 +263,7 @@
             </p>
           </div>
         </div>
-        <div class="flex justify-center mt-6 m-4">
+        <div class="flex justify-center mt-6 m-4 mb-10">
           <button
             class="cursor-pointer text-md text-white bg-blue-700 hover:bg-[#3A0CA3] p-2 rounded-lg transition-transform duration-300 hover:scale-105 outline-1 md:outline-2 outline-blue-800 outline-offset-2 md:outline-offset-4 md:text-2xl md:p-4 shadow-black shadow-lg"
           >
