--- a/index.html
+++ b/index.html
@@ -3,71 +3,85 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./output.css" />
+    <!-- <link rel="stylesheet" href="./styles.css" /> -->
     <title>Portafolio_Funval</title>
   </head>
   <body>
-    <div class="Titulo">
-      <h1>PORTAFOLIO FUNVAL</h1>
-    </div>
+    <header>
+      <h1 class="flex text-5xl font-bold m-4 items-center justify-center">
+        PORTAFOLIO FUNVAL
+      </h1>
+    </header>
+    <section class="grid grid-cols-3 gap-4 p-4">
+      <button
+        class="Dia2 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+      >
+        <a href="./dia-2/index2.html" target="_blank"> Pelis Funval</a>
+      </button>
 
-    <div class="practica">
-      <h3>PRACTICAS CALIFICADAS</h3>
-    </div>
-
-    <div semana1>
-      <div class="Dia2">
-        <a href="./dia-2/index2.html" target="_blank">
-          Día 2 - Web de Peliculas</a
-        >
-      </div>
-
-      <div class="Practica1">
+      <button
+        class="Practica1 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+      >
         <a href="./practica 1/index.html" target="_blank">
-          Práctica 1 - Mi pagina Personal</a
+          Mi pagina Personal</a
         >
-      </div>
+      </button>
 
-      <div class="Practica2">
+      <button
+        class="Practica2 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+      >
         <a href="./practica 2/index.html" target="_blank">
-          Práctica 2 - Formulario Artbeats</a
+          Formulario Artbeats</a
         >
-      </div>
+      </button>
 
-      <div class="Practica3">
-        <a href="./practica 3/index.html" target="_blank">
-          Práctica 3 - CodeCraft</a
-        >
-      </div>
+      <button
+        class="Practica3 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+      >
+        <a href="./practica 3/index.html" target="_blank"> Wed CodeCraft</a>
+      </button>
 
-      <div class="Dia5">
+      <button
+        class="Dia5 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+      >
         <a href="./Dia-5/Practica Noticias/noticias.html" target="_blank">
-          Dia 5 - Pagina web Noticias</a
+          Web de Noticias</a
         >
-      </div>
+      </button>
 
-      <div class="mp">
+      <button
+        class="mp text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+      >
         <a href="./practica-MP/index.html" target="_blank"> Mini Proyecto</a>
-      </div>
+      </button>
 
-      <div class="Practica-5">
+      <button
+        class="Practica-5 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+      >
         <a href="./practica-5/index.html" target="_blank">
           Calculadora de Areas</a
         >
-      </div>
-      <div class="Aniversario 2025">
+      </button>
+      <button
+        class="Aniversario 2025 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+      >
         <a href="./aniversario/index.html" target="_blank">
           Feliz Aniversario N° 4</a
         >
-      </div>
-      <div class="Practica-6">
+      </button>
+      <button
+        class="Practica-6 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+      >
         <a href="./practica-6/index.html" target="_blank"> Cajero Funval</a>
-      </div>
-      <div class="Practica-7">
+      </button>
+      <button
+        class="Practica-7 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+      >
         <a href="./practica-7/index.html" target="_blank">
           Inventario-Tecnologia</a
         >
-      </div>
-    </div>
+      </button>
+    </section>
   </body>
 </html>
