--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   </head>
   <body>
     <header>
-      <h1 class="flex text-5xl font-bold m-4 items-center justify-center">
+      <h1 class="flex text-5xl font-bold m-6 items-center justify-center">
         PORTAFOLIO FUNVAL
       </h1>
     </header>
     <section class="grid grid-cols-3 gap-4 p-4">
       <button
-        class="Dia2 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+        class="Dia2 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
       >
         <a href="./dia-2/index2.html" target="_blank"> Pelis Funval</a>
       </button>
 
       <button
-        class="Practica1 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+        class="Practica1 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
       >
         <a href="./practica 1/index.html" target="_blank">
           Mi pagina Personal</a
@@ -29,7 +29,7 @@
       </button>
 
       <button
-        class="Practica2 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+        class="Practica2 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
       >
         <a href="./practica 2/index.html" target="_blank">
           Formulario Artbeats</a
@@ -37,13 +37,13 @@
       </button>
 
       <button
-        class="Practica3 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+        class="Practica3 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
       >
         <a href="./practica 3/index.html" target="_blank"> Wed CodeCraft</a>
       </button>
 
       <button
-        class="Dia5 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+        class="Dia5 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
       >
         <a href="./Dia-5/Practica Noticias/noticias.html" target="_blank">
           Web de Noticias</a
@@ -51,32 +51,32 @@
       </button>
 
       <button
-        class="mp text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+        class="mp cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
       >
         <a href="./practica-MP/index.html" target="_blank"> Mini Proyecto</a>
       </button>
 
       <button
-        class="Practica-5 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+        class="Practica-5 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
       >
         <a href="./practica-5/index.html" target="_blank">
           Calculadora de Areas</a
         >
       </button>
       <button
-        class="Aniversario 2025 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+        class="Aniversario 2025 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
       >
         <a href="./aniversario/index.html" target="_blank">
           Feliz Aniversario N° 4</a
         >
       </button>
       <button
-        class="Practica-6 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+        class="Practica-6 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
       >
         <a href="./practica-6/index.html" target="_blank"> Cajero Funval</a>
       </button>
       <button
-        class="Practica-7 text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg"
+        class="Practica-7 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
       >
         <a href="./practica-7/index.html" target="_blank">
           Inventario-Tecnologia</a
