--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <button
         class="mp cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
       >
-        <a href="./practica-MP/index.html" target="_blank"> Mini Proyecto</a>
+        <a href="./practica-MP/index.html" target="_blank"> Mini Proyecto-1</a>
       </button>
 
       <button
@@ -80,6 +80,13 @@
       >
         <a href="./practica-7/index.html" target="_blank">
           Inventario-Tecnologia</a
+        >
+      </button>
+      <button
+        class="MiniProyecto-2 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
+      >
+        <a href="./practica-MP/miPortafolio-Html/index.html" target="_blank">
+          Mini Proyecto-2</a
         >
       </button>
     </section>
