--- a/practica-MP/miPortafolio-Html/contactanos.html
+++ b/practica-MP/miPortafolio-Html/contactanos.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="stylesheet" href="../output.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Contactanos</title>
@@ -14,12 +13,10 @@
     />
     <link rel="stylesheet" href="../miEstilo-Css/styles.css" />
   </head>
-
   <body>
     <div id="app-root">
       <div id="menu"></div>
       <hr class="border-t-2 border-[#04227e85] mt-1 md:border-t-4" />
-
       <main
         class="flex flex-col justify-center items-center py-10 bg-gray-100 dark:bg-gray-900"
       >
@@ -50,7 +47,6 @@
               class="w-full p-3 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-900 dark:text-white rounded-lg focus:outline-none focus:ring-2 focus:ring-[#7265d7]"
             />
           </div>
-
           <div class="mb-4">
             <label
               for="email"
@@ -66,7 +62,6 @@
               class="w-full p-3 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-900 dark:text-white rounded-lg focus:outline-none focus:ring-2 focus:ring-[#7265d7]"
             />
           </div>
-
           <div class="mb-6">
             <label
               for="message"
@@ -82,7 +77,6 @@
               class="w-full p-3 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-900 dark:text-white rounded-lg focus:outline-none focus:ring-2 focus:ring-[#7265d7]"
             ></textarea>
           </div>
-
           <div class="text-center">
             <button
               type="submit"
@@ -92,7 +86,6 @@
             </button>
           </div>
         </form>
-
         <!-- Sección de redes sociales -->
         <div class="m-4 flex gap-10 justify-center items-center">
           <a
@@ -123,7 +116,7 @@
             aria-label="Instagram"
           >
             <img
-              src="../Jpg/Redes Sociales/Instagram.png"
+              src="../Jpg/Redes Sociales/instagram.png"
               alt="Instagram"
               class="w-16 h-16 object-contain rounded-xl hover:scale-110 transition duration-300"
             />
