--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
           Mini Proyecto-2</a
         >
       </button>
+      <button
+        class="practica-8 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
+      >
+        <a href="./practica-8/index.html" target="_blank"> Tictactoe</a>
+      </button>
+      <button
+        class="practica-8.1 cursor-pointer text-2xl font-semibold bg-[#92fcf6] p-4 m-2 rounded-2xl border-2 border-black shadow-black/30 shadow-lg hover:scale-105"
+      >
+        <a href="./practica-8/practica-8.1/index.html" target="_blank">
+          Tictactoe Neon</a
+        >
+      </button>
     </section>
   </body>
 </html>
